Mon Feb 20 16:40:24 MST 2006  Daniel Drake <dsd@gentoo.org>

	* src/fe-gnome/util.c:
	* src/fe-gnome/util.h:
	* src/fe-gnome/preferences-dialog.c:
	* src/fe-gnome/connect-dialog.c:
	* src/fe-gnome/dcc-window.c:
	* src/fe-gnome/channel-list.c:
	  - Allow dialogs to be closed with the escape key (#331911)

Mon Feb 20 18:47:23 CET 2006  Daniel Drake <dsd@gentoo.org>

	* src/fe-gnome/main-window.c:
	  - Fix a crash with the change nick dialog (#331914).

Sun Feb 19 18:02:19 MST 2006  David Trowbridge <trowbrds@gmail.com>

	A m4/gnome-doc-utils.m4:
	A help/xchat-gnome.omf.in:
	D help/C/figures/Makefile.am:
	D help/C/Makefile.am:
	* help/C/xchat-gnome.xml:
	D help/C/xchat-gnome-C.omf:
	* help/Makefile.am:
	* configure.ac:
	* Makefile.am:
	  - Work towards using gnome-doc-utils for the help document

Sun Feb 19 17:24:45 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	  - Apply Daniel Drake's patch to prevent the default font for new
	    users from being really ugly (#331832)

Sun Feb 19 17:04:14 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-irc.c:
	  - Eliminate a critical warning that occurred if the font name in
	    gconf was bad.

Sat Feb 18 14:32:42 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/status-bar.c:
	  - Fix some minor type mismatches

Sat Feb 18 14:25:51 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-irc.c:
	  - Guard against bad values from gconf.

Sat Feb 18 14:24:18 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* m4/intltool.m4:
	  - Update intltool macros

Sat Feb 18 14:09:51 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/text-entry.c:
	  - Apply keizie@gmail.com's patch to make nickname completion utf-8
	    clean.

Wed Feb 15 21:07:16 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/channel-list.c: