@@ -1,3 +1,10 @@
+Mon Feb 20 17:49:38 MST 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* plugins/notification/notification.c:
+	  - Apply a modified version of James "Doc" Livingston's patch to fix
+	    the notification-area plugin to handle the tray disappearing in an
+	    elegant fashion.
+
 Mon Feb 20 16:40:24 MST 2006  Daniel Drake <dsd@gentoo.org>
 
 	* src/fe-gnome/util.c:
